--- a/app.wxss
+++ b/app.wxss
@@ -67,6 +67,9 @@
 	justify-content: center;
 	align-items: center;
 	font-size: 26rpx;
+	padding: 15rpx 0;
+}
+.noDataTxt.hasMargTop{
 	margin-top: -36rpx;
 }
 .maskLayer{
