--- a/pages/rqMaoyi/filter.wxml
+++ b/pages/rqMaoyi/filter.wxml
@@ -1,14 +1,15 @@
 <view class="filterMod padd">
-	<view class="modTit otherCol">液质选择<text class="subTxt">(单选)</text></view>
+	<view class="modTit otherCol">液质选择<text class="subTxt">(多选)</text></view>
 	<view class="areaList clearfix">
-		<view class="areaItem">管道也</view>
-		<view class="areaItem">北京市</view>
-		<view class="areaItem">湖北省</view>
-		<view class="areaItem">河南省</view>
-		<view class="areaItem">内蒙古自治区</view>
-		<view class="areaItem">新疆为伍二组自治区</view>
+		<view class="areaItem"
+			wx:for="{{lqNameData}}"
+			wx:key="index"
+			class="areaItem {{item.state==1 ? 'active':''}}"
+			data-index="{{index}}"
+			bindtap="selectLqType"
+		>{{item.name}}</view>
 	</view>
-</view> 
+</view>
 <!-- 价格区间 -->
 <view class="filterMod padd">
 	<view class="modTit otherCol">价格区间<text class="subTxt">(元)</text></view>
@@ -25,12 +26,15 @@
 <view class="filterMod padd">
 	<view class="modTit otherCol">配送区域<text class="subTxt">(多选)</text></view>
 	<view class="areaList clearfix">
-		<view class="areaItem active">河南省</view>
-		<view class="areaItem">北京市</view>
-		<view class="areaItem">湖北省</view>
-		<view class="areaItem">河南省</view>
-		<view class="areaItem">内蒙古自治区</view>
-		<view class="areaItem">新疆为伍二组自治区</view>
+		<view class="areaList clearfix">
+			<view
+				wx:for="{{provData}}"
+				wx:key="index"
+				class="areaItem {{item.state==1 ? 'active':''}}"
+				data-index="{{index}}"
+				bindtap="selectProv"
+			>{{item.province}}</view>
+		</view>
 	</view>
 </view>
 
