--- a/pages/rqDev/index.wxss
+++ b/pages/rqDev/index.wxss
@@ -1,69 +1,43 @@
+page{
+	margin-top: 81rpx;
+}
 .filterWrap{
 	width: 100%;
-	height: 100rpx;
+	height: 80rpx;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	background: #fff;
-	position: fixed;
 	z-index: 3;
+	border-bottom: 1rpx solid #e8e8e8;
+	position: fixed;
 	left: 0;
 	top: 0;
 }
-.inputView{
-	width: 100%;
+.pubMod{
+	float: left;
 	height: 70rpx;
-	background: #efefef;
-	border-radius: 40rpx;
+	line-height: 70rpx;
+	font-size: 28rpx;
+	color: #606060;
 	position: relative;
 	margin-left: 30rpx;
+}
+.pubMod i{
+	margin-right: 10rpx;
+	font-size: 30rpx;
+}
+.filterBtn {
 	margin-right: 30rpx;
 }
-.inputView i{
-	position: absolute;
-	left: 4%;
-	top: 22rpx;
-	color: #606060;
-	font-size: 32rpx;
-}
-.inputView input{
-	width: 70%;
+.filterBtn text{
 	font-size: 28rpx;
-	height: 100%;
-	padding: 0 15%;
-	color: #606060;
+	color:#606060 ;
+	margin-right:12rpx ;
 }
-.rgDevWrap{
-	position: absolute;
-	left: 0;
-	right: 0;
-	top: 100rpx;
-	bottom: 0;
-}
-.rgDevWrap .leftRqDevLm{
-	width: 200rpx;
-	position: absolute;
-	left: 0;
-	top: 0;
-	bottom: 0;
-	background: yellow;
-}
-.rgDevWrap .rightRqDevCon{
-	position: absolute;
-	left: 215rpx;
-	right: 15rpx;
-	top: 0;
-	bottom: 0;
-}
-.rgDevWrap .leftRqDevLm scroll-view,
-.rgDevWrap .rightRqDevCon scroll-view{
-	height: 100%;
-}
-.rgDevWrap .leftRqDevLm scroll-view{
-	background: #efefef;
-}
-.rgDevWrap .rightRqDevCon scroll-view{
-	background: #fff;
+.filterBtn i{
+	color:#606060 ;
+	font-size: 26rpx;
 }
 .lmItem{
 	height: 80rpx;
@@ -91,7 +65,7 @@
 	display: block;
 }
 .rqDevItemCon{
-	padding: 15rpx 0;
+	padding: 20rpx 0;
 	border-bottom: 1rpx solid #e8e8e8;
 }
 .imgView{
@@ -108,7 +82,7 @@
 	border-radius: 6rpx;
 }
 .itemCon{
-	width: 66%;
+	width: 73%;
 	height: 160rpx;
 	float: left;
 }
@@ -137,7 +111,7 @@
 	margin-right: 15rpx;
 }
 .volumeItem:last-child{
-	max-width: 28%;
+	max-width: 37%;
 	margin-right: 15rpx;
 }
 .priceView{
